--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: 'Open Sans', Arial, serif;
+  color: #333;
 }
 
 body {
@@ -59,19 +60,20 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin-top: 30px;
 }
 
 .reg-form__table--1 {
+  margin-top: 12px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 180px 320px 1fr;
       grid-template-columns: 180px 320px 1fr;
-  -ms-grid-rows: (40px)[3] 80px;
-      grid-template-rows: repeat(3, 40px) 80px;
+  -ms-grid-rows: (minmax(40px, autofit))[3] 80px;
+      grid-template-rows: repeat(3, minmax(40px, autofit)) 80px;
   grid-gap: 10px;
       grid-template-areas: "label-email email email-details" "label-pwd1 pwd1 pwd-details" "label-pwd2 pwd2 pwd-details" "label-country countries pwd-details";
 }
@@ -79,12 +81,35 @@ body {
 .reg-form__table--2 {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 180px 180px 180px 1fr;
-      grid-template-columns: 180px 180px 180px 1fr;
+  -ms-grid-columns: 180px 190px 190px;
+      grid-template-columns: 180px 190px 190px;
   -ms-grid-rows: 40px;
       grid-template-rows: 40px;
   grid-gap: 10px;
       grid-template-areas: "label-name first-name family-name empty";
+}
+
+.reg-form__table--3 {
+  margin-top: 12px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 180px 320px;
+      grid-template-columns: 180px 320px;
+  -ms-grid-rows: (40px)[3];
+      grid-template-rows: repeat(3, 40px);
+  grid-gap: 10px;
+}
+
+.reg-form__table--4 {
+  margin-top: 30px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 180px 1fr;
+      grid-template-columns: 180px 1fr;
+  -ms-grid-rows: 35px 15px 60px;
+      grid-template-rows: 35px 15px 60px;
+  grid-gap: 10px;
+      grid-template-areas: "empty policy" "empty agreement" "empty button";
 }
 
 .reg-form__input {
@@ -119,7 +144,7 @@ body {
       -ms-flex-align: end;
           align-items: flex-end;
   padding-top: auto;
-  padding-right: 9px;
+  padding-right: 20px;
   height: 40px;
   width: 190px;
   color: #4F4F4F;
@@ -135,7 +160,7 @@ body {
   font-size: 22px;
   font-weight: bold;
   position: absolute;
-  right: -6px;
+  right: 5px;
 }
 
 .reg-form__details {
@@ -162,10 +187,45 @@ body {
   grid-area: label-pwd2;
 }
 
-#email {
+.input-email {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: email;
+}
+
+.status-message {
+  display: none;
+  padding-top: 15px;
+  font-size: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.status-message img {
+  display: none;
+  width: 20px;
+  height: 20px;
+}
+
+.status-message__text {
+  width: 300px;
+}
+
+.img-div {
+  width: 20px;
 }
 
 #password1 {
@@ -232,6 +292,7 @@ body {
 }
 
 #family-name {
+  margin-left: 10px;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
   grid-area: family-name;
@@ -239,6 +300,88 @@ body {
 
 .name-details {
   -ms-grid-row: 1;
-  -ms-grid-column: 4;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
   grid-area: empty;
+}
+
+input::-webkit-input-placeholder {
+  font-weight: normal;
+}
+
+input:-ms-input-placeholder {
+  font-weight: normal;
+}
+
+input::-ms-input-placeholder {
+  font-weight: normal;
+}
+
+input::placeholder {
+  font-weight: normal;
+}
+
+.agreement {
+  color: #4F4F4F;
+  font-size: 14px;
+}
+
+.empty {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: empty;
+}
+
+.agreement {
+  line-height: 1.3;
+}
+
+.agreement__policy {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: policy;
+}
+
+.agreement__checkbox-wrapper {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: agreement;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.agreement__checkbox {
+  margin-right: 10px;
+}
+
+.button {
+  width: 226px;
+  height: 36px;
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: button;
+  background-color: #6A9D67;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+  border: 0;
+  line-height: 1.3;
+  font-size: 16px;
+  margin-top: 24px;
+}
+
+.button:hover {
+  background-color: #467146;
 }
