--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,312 @@
-// @import './fonts';
-// @import './mixins';
-// @import './typography';
-// @import './blocks/button';
-@import './blocks/main';
-// @import './blocks/footer';
+$bg: #FCFBFA;
+$light-green: #6A9D67;
+$dark-green: #467146;
+$red: #C74634;
+$light-grey: #CBC5BF;
+$font-dark: #333;
+$font-grey: #4F4F4F;
+$font-light-grey: #667667;
+
+html,
+body {
+	width: 100vw;
+	height: 100vh;
+	font-family: 'Open Sans', Arial, serif;
+	color: $font-dark;
+}
+
+body {
+	background-image: url('../images/bgimg.jpg');
+	background-position: center;
+	background-size: cover;
+}
+
+.label:after {
+	content: "*";
+	color: #BB501C;
+	display: inline-block;
+	font-size: 20px;
+	margin-left: 2px;
+}
+
+.container {
+	min-height: 60%;
+	min-width: 300px;
+	max-width: 870px;
+	background-color: $bg;
+	border-radius: 10px;
+	padding: 50px;
+	margin-top: 60px;
+	margin-bottom: 0 !important;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.main {
+
+	&__title {
+		font-size: 34px;
+		text-align: center;
+		margin-top: 15px;
+
+		&>span {
+			font-weight: 600;
+		}
+
+		&--login {
+			margin-top: 30px;
+			text-align: center;
+			font-size: 18px;
+		}
+	}
+
+	&__reg-form {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+		margin-top: 30px;
+	}
+}
+
+.reg-form {
+	&__table--1 {
+		margin-top: 12px;
+		display: grid;
+		grid-template-columns: 180px 320px 1fr;
+		grid-template-rows: repeat(3, minmax(40px, autofit)) 80px;
+		grid-gap: 10px;
+		grid-template-areas:
+			"label-email email email-details"
+			"label-pwd1 pwd1 pwd-details"
+			"label-pwd2 pwd2 pwd-details"
+			"label-country countries pwd-details";
+	}
+
+	&__table--2 {
+		display: grid;
+		grid-template-columns: 180px 190px 190px;
+		grid-template-rows: 40px;
+		grid-gap: 10px;
+		grid-template-areas:
+			"label-name first-name family-name empty";
+	}
+
+	&__table--3 {
+		margin-top: 12px;
+		display: grid;
+		grid-template-columns: 180px 320px;
+		grid-template-rows: repeat(3, 40px);
+		grid-gap: 10px;
+	}
+
+	&__table--4 {
+		margin-top: 30px;
+		display: grid;
+		grid-template-columns: 180px 1fr;
+		grid-template-rows: 35px 15px 60px;
+		grid-gap: 10px;
+		grid-template-areas:
+			"empty policy"
+			"empty agreement"
+			"empty button";
+	}
+
+	&__input {
+		height: 35px;
+		width: 320px;
+		margin-top: 10px;
+		padding-left: 10px;
+		font-weight: bold;
+		background-color: $bg;
+		border: none;
+		border-bottom: 2px solid $light-grey;
+
+		&:focus,
+		&:active {
+			background-color: #fff;
+			border: none;
+			border-bottom: 2px solid $light-green;
+		}
+
+		&--name {
+			width: 200px !important;
+		}
+	}
+
+	&__label {
+		display: flex;
+		justify-content: flex-end;
+		align-items: flex-end;
+		padding-top: auto;
+		padding-right: 20px;
+		height: 40px;
+		width: 190px;
+		color: $font-grey;
+		font-size: 15px;
+		text-align: right;
+		line-height: 20px;
+		position: relative;
+
+		&::after {
+			content: '*';
+			color: $red;
+			font-size: 22px;
+			font-weight: bold;
+			position: absolute;
+			right: 5px;
+		}
+	}
+
+	&__details {
+		font-size: 11px;
+		color: $font-light-grey;
+		line-height: 1.3em;
+
+	}
+
+}
+
+.label-email {
+	grid-area: label-email;
+}
+
+.label-pwd1 {
+	grid-area: label-pwd1;
+}
+
+.label-pwd2 {
+	grid-area: label-pwd2;
+}
+
+.input-email {
+	grid-area: email;
+}
+
+.status-message {
+	display: none;
+	padding-top: 15px;
+	font-size: 12px;
+	display: flex;
+	flex-wrap: nowrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	// line-height: 1.3;
+	& img {
+		display: none;
+		width: 20px;
+		height: 20px;
+	}
+	&__text{
+		width: 300px;
+	}
+}
+.img-div{
+	width: 20px;
+}
+#password1 {
+	grid-area: pwd1;
+}
+
+#password2 {
+	grid-area: pwd2;
+}
+
+.email-details {
+	grid-area: email-details;
+}
+
+.pwd-details {
+	grid-area: pwd-details;
+	padding-top: 10px;
+}
+
+.label-country {
+	grid-area: label-country;
+	margin-top: 25px;
+}
+
+#countries {
+	grid-area: countries;
+	border-radius: 4px;
+	height: 40px;
+	margin-top: 35px;
+	color: #666;
+	background: linear-gradient(to bottom, #e7e7e7 0%, #ffffff 100%);
+	border: 1px solid #cacaca !important;
+	padding: 8px 10px;
+	cursor: pointer;
+	width: 324px;
+	font-size: 16px;
+	border-color: #DEE4E7;
+}
+
+.label-name {
+	grid-area: label-name;
+}
+
+#first-name {
+	grid-area: first-name;
+}
+
+#family-name {
+	margin-left: 10px;
+	grid-area: family-name;
+}
+
+.name-details {
+	grid-area: empty;
+}
+
+input::placeholder {
+	font-weight: normal;
+}
+
+.agreement {
+	color: $font-grey;
+	font-size: 14px;
+}
+
+.empty {
+	grid-area: empty;
+}
+
+.agreement {
+	line-height: 1.3;
+
+	&__policy {
+		grid-area: policy;
+	}
+
+	&__checkbox-wrapper {
+		grid-area: agreement;
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+	}
+
+	&__checkbox {
+		margin-right: 10px;
+	}
+}
+
+.button {
+	width: 226px;
+	height: 36px;
+	grid-area: button;
+	background-color: $light-green;
+	color: white;
+	border-radius: 4px;
+	font-weight: bold;
+	border: 0;
+	line-height: 1.3;
+	font-size: 16px;
+	margin-top: 24px;
+
+	&:hover {
+		background-color: $dark-green;
+	}
+}
 
