--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -205,11 +205,10 @@ body {
 .img-div{
 	width: 20px;
 }
-#password1 {
+.input-password1 {
 	grid-area: pwd1;
 }
-
-#password2 {
+.input-password2 {
 	grid-area: pwd2;
 }
 
