--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -79,7 +79,7 @@ body {
 	&__table--2 {
 		display: grid;
 		grid-template-columns: 180px 190px 190px;
-		grid-template-rows: 40px;
+		grid-template-rows: minmax(40px, autofit);
 		grid-gap: 10px;
 		grid-template-areas:
 			"label-name first-name family-name empty";
@@ -89,7 +89,7 @@ body {
 		margin-top: 12px;
 		display: grid;
 		grid-template-columns: 180px 320px;
-		grid-template-rows: repeat(3, 40px);
+		grid-template-rows: repeat(3, minmax(40px, autofit));
 		grid-gap: 10px;
 	}
 
@@ -307,6 +307,11 @@ input::placeholder {
 
 	&__checkbox {
 		margin-right: 10px;
+	}
+
+	&--notagreed {
+		color: $red;
+		font-weight: 600;
 	}
 }
 
